mychart/templates/policy2.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-to-database
spec:
  podSelector:
    matchLabels:
      app: mongodb
  ingress:

    # Allow access to database
    - from:
        - podSelector:
            matchLabels:
              app: nodeapp
